# cloud-inference-platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PERFORMANCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cache/: __init__.py  checkpoint_store.py  redis_cache.py
configs/: slo_config.yaml
deploy/: Dockerfile  docker-compose.yaml  prometheus.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
docs/: api.rst  conf.py  index.rst
examples/: benchmark_router.py  example_notebook.ipynb  local_demo.py
kernels/: __init__.py  benchmarks.py  tvm_flash_jvp.py
observability/: __init__.py  grafana_dashboard.json  prometheus_metrics.py  slo_tracker.py
router/: __init__.py  load_monitor.py  priority_queue.py  slo_router.py  tvm_scaler.py
serving/: __init__.py  dit_tvm_backend.py  gaussian_backend.py  sglang_backend.py  tensorrt_backend.py  vllm_backend.py
tests/: conftest.py  locust_load_test.py  test_backend_health.py  test_integration.py  test_router.py  test_tvm_flash_jvp.py  test_tvm_scaler.py
