[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cloud-inference-platform"
version = "0.1.0"
description = "SLO-aware GPU router with terminal velocity matching dynamic step-scaling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Chris Matteau"}]
dependencies = [
    "torch>=2.2.0",
    "triton>=2.2.0",
    "vllm>=0.4.0",
    "sglang>=0.5.10",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "locust>=2.24.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.0",
    "nvidia-ml-py>=12.0.0",
    "pyyaml>=6.0",
    "fakeredis>=2.23.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "pre-commit"]
docs = ["sphinx", "sphinx-autodoc-typehints"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: end-to-end integration tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["docs", "examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["E501"]
"kernels/tvm_flash_jvp.py" = ["E741"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "(^docs/|^examples/|^tests/)"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cache*", "kernels*", "observability*", "router*", "serving*"]

[tool.setuptools.package-data]
cache = ["py.typed"]
kernels = ["py.typed"]
observability = ["py.typed"]
router = ["py.typed"]
serving = ["py.typed"]
